# GnuCashUtils

./: .cursorignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  architecture_implementation_plan.mdc  developers_guide.mdc  gnucash_email_receipt_categorization_spec.mdc  pyproject.toml  test_plan_and_strategy.mdc
.cursor/rules/: architecture.mdc  code-quality.mdc  project-spec.mdc  testing.mdc
.github/workflows/: ci.yml
docs/: architecture_implementation_plan.mdc  developers_guide.mdc  gnucash_email_receipt_categorization_spec.mdc  test_plan_and_strategy.mdc
src/gnc_enrich/: __init__.py  __main__.py  cli.py  config.py
src/gnc_enrich/apply/: engine.py
src/gnc_enrich/domain/: models.py
src/gnc_enrich/email/: index.py  parser.py
src/gnc_enrich/gnucash/: loader.py
src/gnc_enrich/llm/: client.py
src/gnc_enrich/matching/: email_matcher.py  receipt_matcher.py
src/gnc_enrich/ml/: predictor.py
src/gnc_enrich/prompts/: __init__.py  category_step1.txt  category_step2.txt  extract_email.txt  extract_from_description.txt  extract_merge.txt
src/gnc_enrich/receipt/: ocr.py  repository.py
src/gnc_enrich/review/: service.py  webapp.py
src/gnc_enrich/review/templates/: base.html  done.html  queue.html  review.html
src/gnc_enrich/services/: pipeline.py
src/gnc_enrich/state/: repository.py
tests/: __init__.py  conftest.py  test_apply_engine.py  test_cli.py  test_cli_flags.py  test_config_and_domain.py  test_email_pipeline.py  test_gnucash_loader.py  test_integration.py  test_llm_client.py  test_llm_flow_cross_product.py  test_main_module.py  test_matching.py  test_ml_predictor.py  test_new_features.py  test_pipeline.py  test_prompts.py  test_receipt_pipeline.py  test_review.py  test_state_repository.py  test_stub_contracts.py  test_system.py  test_system_scenarios.py
tests/fixtures/emails/: bank_alert.eml  order_confirm.eml  receipt_email.eml  subscription.eml  unrelated.eml
tests/fixtures/emails/amazon/: order_confirmation_laptop.eml  order_refund.eml
tests/fixtures/emails/bank_online_finance/: revolut_card_payment.eml  revolut_transfer_342.eml
tests/fixtures/emails/subscriptions/: netflix_monthly.eml  spotify_monthly.eml
tests/fixtures/emails/utilities/: bt_broadband.eml  thames_water.eml
