[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnc-enrich"
version = "0.1.0"
description = "GnuCash transaction enrichment and categorization tool"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "lxml",
    "Pillow",
    "pillow-heif",
    "pytesseract",
    "scikit-learn",
    "joblib",
    "flask",
    "requests",
]

[project.scripts]
gnc-enrich = "gnc_enrich.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gnc_enrich = ["prompts/*.txt"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
]
web = ["ddgs"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
pretty = true
strict_optional = true
